[package]
name = "video-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
sha1 = "0.10"
base64 = "0.22"
natord = "1.0"
cloud-storage = "0.11"
futures-util = "0.3"
env_logger = "0.11"
